# Multi-threaded_application

./: CMakeLists.txt  README.md
proga_1/: CMakeLists.txt
proga_1/headers/: conn_linux_socket.h  working_with_buffer.h
proga_1/sources/: main.cpp
proga_2/: CMakeLists.txt
proga_2/headers/: Socket_server.h
proga_2/sources/: main.cpp
